--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <span>HP</span>
                         80
                     </p>
-                    <img src="https://unpkg.com/pokeapi-sprites@2.0.2/sprites/pokemon/other/dream-world/1.svg" alt="">
+                    <img src="" alt="">
                     <h2 class="poke-name">Sample Name</h2>
                     <div class="types">
                         <span>type 1</span>
